# fastapi_mcp_server

./: docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: pydantic_models.py
src/fastapi_server/: app.py
src/fastapi_server/routes/: knowledge_base_route.py
src/fastapi_server/services/: rag.py
src/insurance_chatbot/: bot.py
