[project]
name = "fastapi_mcp_demo"
version = "0.1.0"
description = "FastAPI MCP Demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "fastapi>=0.115.14",
    "fastapi-mcp>=0.3.4",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.3.0",
    "langchain-mcp-adapters>=0.1.8",
    "langchain-milvus>=0.2.1",
    "langchain-ollama>=0.3.3",
    "mcp-proxy>=0.8.2",
    "mcp-use>=1.3.3",
    "mcp[cli]>=1.10.1",
    "ollama>=0.5.1",
    "pymupdf>=1.26.3",
    "pyngrok>=7.2.11",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.0.0",
    "uvicorn>=0.35.0",
]
